// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemRating /> should render with props 1`] = `
<ItemRating
  reviewsCount={3}
  value={2}
>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={2}
      >
        <div
          className="rating"
        >
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="5"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="4"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="3"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star full-star"
            fill="none"
            height={16}
            key="2"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star full-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star full-star"
            fill="none"
            height={16}
            key="1"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star full-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
        </div>
      </Rating>
      <Box
        dangerouslySetInlineStyle={
          Object {
            "__style": Object {
              "paddingBottom": "2px",
            },
          }
        }
        marginLeft={2}
      >
        <div
          className="M-l__2"
          style={
            Object {
              "paddingBottom": "2px",
            }
          }
        >
          <Memo(Text)
            color="gray38"
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              3
            </span>
          </Memo(Text)>
        </div>
      </Box>
    </div>
  </Box>
</ItemRating>
`;

exports[`<ItemRating /> should render without props 1`] = `
<ItemRating>
  <Box
    alignItems="center"
    direction="row"
    display="flex"
    marginTop={0}
  >
    <div
      className="display-flex direction-row align-items-center M-t__0"
    >
      <Rating
        value={0}
      >
        <div
          className="rating"
        >
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="5"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="4"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="3"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="2"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
          <StarSVG
            className="rating-star empty-star"
            fill="none"
            height={16}
            key="1"
            onClick={[Function]}
            viewBox="0 0 16 16"
            width={16}
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              className="rating-star empty-star"
              fill="none"
              height={16}
              onClick={[Function]}
              viewBox="0 0 16 16"
              width={16}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M8 11.845l-4.101 2.574a.4.4 0 0 1-.601-.436l1.181-4.696L.764 6.183a.4.4 0 0 1 .23-.706l4.83-.327L7.627.657a.4.4 0 0 1 .742 0l1.804 4.493 4.83.327a.4.4 0 0 1 .23.706l-3.716 3.104 1.182 4.696a.4.4 0 0 1-.6.436L8 11.845z"
                fill="#FFAB00"
                fillRule="evenodd"
              />
            </svg>
          </StarSVG>
        </div>
      </Rating>
    </div>
  </Box>
</ItemRating>
`;
